@@ -1,4 +1,11 @@
 
+2001-02-21  Earnie Boyd  <earnie@users.sourceforge.net
+
+	* include/w32api.h: (_W32API_VERSION): Remove.
+	(__W32API_VERSION): Add.
+	(__W32API_MAJOR_VERSION): Ditto.
+	(__W32API_MINOR_VERSION): Ditto.
+
 2001-02-21  Danny Smith <dannysmith@users.sourceforge.net>
 
 	* include/wingdi.h (struct _DOCINFO[AW]): UNICODE it.
